<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.aaditya.algorithms</groupId>
    <artifactId>algorithms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>leetcode</module>
        <module>euler</module>
        <module>srm</module>
        <module>hackerrank</module>
        <module>codefights</module>
    </modules>
    <properties>
        <jdk.version>1.20</jdk.version>
        <jdk.release.version>1.17</jdk.release.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.0</version>
                    <configuration>
                        <source>${jdk.version}</source>
                        <target>${jdk.version}</target>
                        <release>${jdk.release.version}</release>
                        <compilerVersion>${jdk.version}</compilerVersion>
                        <fork>true</fork>
                        <compilerId>javac</compilerId>
                        <argLine>-Xmx512m</argLine>
                        <argLine>-XX:MaxPermSize=256m</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>LATEST</version>
        </dependency>
    </dependencies>
</project>